objects/EMailMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>UniqueName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>EMailMapping</label>
    <pluralLabel>EMailMappings</pluralLabel>
</CustomObject>